# umd-fcrepo-oaipmh

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  solr_conf.yml.avalon  solr_conf.yml.fedora
docs/: add_handles.md  configuration.md
src/oaipmh/: __init__.py  add_handles.py  dataprovider.py  oai.py  server.py  solr.py  utils.py  web.py
src/oaipmh/transformers/: oai_dc.xsl
tests/: conftest.py  test_solr.py  test_web.py
tests/dataprovider/: test_dataprovider.py  test_envattribute.py
tests/handles/: test_handles.py
tests/test_web/: config.yml
