[project]
name = "umd-fcrepo-oaipmh"
version = "1.1.0"
dependencies = [
    "flask",
    "lxml",
    "oai-repo",
    "pysolr",
    "python-dotenv",
    "PyYAML",
    "requests",
    "requests-jwtauth",
    "waitress",
    "Sickle"
]
[project.optional-dependencies]
test = [
    "pycodestyle",
    "pytest",
    "pytest-cov",
]
[project.scripts]
fcrepo-oaipmh-server = "oaipmh.server:run"
add-handles = "oaipmh.add_handles:main"
